--- a/templates/ClientInstance.ts.hbs
+++ b/templates/ClientInstance.ts.hbs
@@ -26,7 +26,7 @@ export namespace {{name.upperCamelCase}} {
 *   const { {{pascalcase metadata.categories.[CC API Family].[0]}}, ClientConfig } = require("commerce-sdk");
 *
 *   const clientConfig: ClientConfig = { ... };
-*   const {{metadata.specName}}Client = new {{pascalcase metadata.categories.[CC API Family].[0]}}.{{capitalize metadata.specName}}(clientConfig);
+*   const {{name.lowerCamelCase}}Client = new {{pascalcase metadata.categories.[CC API Family].[0]}}.{{name.upperCamelCase}}(clientConfig);
 * ```
 *
 * Example with shopper auth
@@ -41,7 +41,7 @@ export namespace {{name.upperCamelCase}} {
 * };
 * token = await helpers.getShopperToken(clientConfig, { type: "guest" });
 * clientConfig.headers["authorization"] = token.getBearerHeader();
-* const {{name.upperCamelCase}}Client = new {{pascalcase metadata.categories.[CC API Family].[0]}}.{{name.upperCamelCase}}(clientConfig);
+* const {{name.lowerCamelCase}}Client = new {{pascalcase metadata.categories.[CC API Family].[0]}}.{{name.upperCamelCase}}(clientConfig);
 * ```
 *
 * <span style="font-size:.7em; display:block; text-align: right">
