--- a/templates/dtoPartial.ts.hbs
+++ b/templates/dtoPartial.ts.hbs
@@ -1,14 +1,16 @@
-
+{{#if (isTypeDefinitionArray typeDto)}}
+{{{getDataType typeDto}}};
+{{else}}
 {
 {{#each (getProperties typeDto)}}
 {{#if (isRequiredProperty .)}}
-    {{{getValue name}}}: {{#or (eq (getTypeFromProperty .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getTypeFromProperty .}}}{{/or}};
+  {{{getValue name}}}: {{#or (eq (getTypeFromProperty .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getTypeFromProperty .}}}{{/or}};
 {{else if (isOptionalProperty .)}}
-    {{{getValue name}}}?: {{#or (eq (getTypeFromProperty .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getTypeFromProperty .}}}{{/or}};
+  {{{getValue name}}}?: {{#or (eq (getTypeFromProperty .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getTypeFromProperty .}}}{{/or}};
 {{/if}}
 {{/each}}
 }
 {{~#if (isAdditionalPropertiesAllowed typeDto)}}
-& { [key: string]: any }
+ & { [key: string]: any }
 {{/if}}
-
+{{/if}}
