Replace . with this in HB templates

--- a/templates/ClientInstance.ts.hbs
+++ b/templates/ClientInstance.ts.hbs
@@ -7,7 +7,7 @@ import { OperationOptions } from "retry";
 export namespace {{name.upperCamelCase}} {
   {{#each dataTypes}}
       {{#if (or (isTypeDefinition this) (isArrayType this))}}
-export type {{getValue name}} = {{> dtoPartial typeDto=.}}
+export type {{getValue name}} = {{> dtoPartial typeDto=this}}
       {{/if}}
   {{/each}}
 }
