Update dtoPartial template to handle array types (#271)
* Update dtoPartial template to handle array types

* Function name change

* Upgrade raml-toolkit to v0.5.2

* Replace . with this in HB templates

--- a/templates/ClientInstance.ts.hbs
+++ b/templates/ClientInstance.ts.hbs
@@ -6,8 +6,8 @@ import { OperationOptions } from "retry";
 // eslint-disable-next-line @typescript-eslint/no-namespace
 export namespace {{name.upperCamelCase}} {
   {{#each dataTypes}}
-      {{#if (isTypeDefinition .)}}
-      export type {{getValue name}} = {{> dtoPartial typeDto=.}}
+      {{#if (or (isTypeDefinition this) (isArrayType this))}}
+export type {{getValue name}} = {{> dtoPartial typeDto=this}}
       {{/if}}
   {{/each}}
 }
