Add user agent header.

--- a/templates/ClientInstance.ts.hbs
+++ b/templates/ClientInstance.ts.hbs
@@ -77,6 +77,6 @@ export class {{name.upperCamelCase}} extends BaseClient {
 
   }
 
-  {{> operationsPartial model}}
+  {{> operationsPartial}}
 
 }
