Clone headers before modifying

--- a/templates/operations.ts.hbs
+++ b/templates/operations.ts.hbs
@@ -145,7 +145,7 @@
         {{/if}}
       {{/each}}
 
-      const headers = (options && options.headers) ? options.headers : {};
+      const headers = (options && options.headers) ? { ...options.headers } : {};
       headers["user-agent"] = "commerce-sdk@{{@root.parent.parent.metadata.sdkVersion}};";
 
       // @ts-ignore
