--- a/templates/ClientInstance.ts.hbs
+++ b/templates/ClientInstance.ts.hbs
@@ -25,6 +25,9 @@ export namespace {{name.upperCamelCase}} {
   {{/each}}
 }
 
+const USER_AGENT_HEADER = "user-agent";
+const USER_AGENT_VALUE = "commerce-sdk@{{parent.parent.metadata.sdkVersion}};"
+
 /**
 * [{{{metadata.name}}}](https://developer.commercecloud.com/s/api-details/{{{getObjectIdByAssetId metadata.assetId}}})
 * ==================================
