Move header logic to @commerce-apps/core.

--- a/templates/ClientInstance.ts.hbs
+++ b/templates/ClientInstance.ts.hbs
@@ -1,7 +1,15 @@
 
-import { StaticClient, BaseClient, ClientConfig, Response, ResponseError } from "@commerce-apps/core";
+import {
+  BaseClient,
+  ClientConfig,
+  Response,
+  ResponseError,
+  StaticClient,
+  getHeaders,
+  mergeHeaders
+} from "@commerce-apps/core";
 import _ from "lodash";
-import { OperationOptions } from "retry";
+import type { OperationOptions } from "retry";
 
 // eslint-disable-next-line @typescript-eslint/no-namespace
 export namespace {{name.upperCamelCase}} {
