Add user agent header (#332)
* Add user agent header.

* Update year.

* npm audit fix

* Remove temp workaround.

* Clone headers before modifying

* Preserve user agent, if specified.

* Use version of fs-extra compatible with node v10.

* Update test to match expected behavior.

* Move header logic to @commerce-apps/core.

* Update dependencies.

* npm dedupe

* Revert snyk version

* Update to latest core + raml-toolkit

* Downgrade @types/n3 to compatible version.

--- a/templates/operations.ts.hbs
+++ b/templates/operations.ts.hbs
@@ -1,4 +1,4 @@
-{{#each encodes.endPoints}}
+{{#each model.encodes.endPoints}}
   {{#each operations}}
     /**
     * {{{formatForTsDoc description}}}
@@ -145,6 +145,8 @@
         {{/if}}
       {{/each}}
 
+      const headers = mergeHeaders(getHeaders(options), { [USER_AGENT_HEADER]: USER_AGENT_VALUE });
+
       // @ts-ignore
       return StaticClient.{{method}}({
         client: this,
@@ -153,7 +155,7 @@
         pathParameters: pathParameters,
         queryParameters: queryParameters,
         retrySettings: (options || {}).retrySettings,
-        headers: (options || {}).headers{{#or (is method "patch") (is method "post") (is method "put")}}, 
+        headers: headers{{#or (is method "patch") (is method "post") (is method "put")}}, 
         body: (options || {}).body{{/or}}
       });
     }
