--- a/templates/ClientInstance.ts.hbs
+++ b/templates/ClientInstance.ts.hbs
@@ -1,7 +1,15 @@
 
-import { StaticClient, BaseClient, ClientConfig, Response, ResponseError } from "@commerce-apps/core";
+import {
+  BaseClient,
+  ClientConfig,
+  Response,
+  ResponseError,
+  StaticClient,
+  getHeaders,
+  mergeHeaders
+} from "@commerce-apps/core";
 import _ from "lodash";
-import { OperationOptions } from "retry";
+import type { OperationOptions } from "retry";
 
 // eslint-disable-next-line @typescript-eslint/no-namespace
 export namespace {{name.upperCamelCase}} {
@@ -24,6 +32,9 @@ export namespace {{name.upperCamelCase}} {
       {{/if}}
   {{/each}}
 }
+
+const USER_AGENT_HEADER = "user-agent";
+const USER_AGENT_VALUE = "commerce-sdk@{{parent.parent.metadata.sdkVersion}};"
 
 /**
 * [{{{metadata.name}}}](https://developer.commercecloud.com/s/api-details/{{{getObjectIdByAssetId metadata.assetId}}})
@@ -77,6 +88,6 @@ export class {{name.upperCamelCase}} extends BaseClient {
 
   }
 
-  {{> operationsPartial model}}
+  {{> operationsPartial}}
 
 }
