Don't enforce CCDC ID for staging APIs

--- a/templates/ClientInstance.ts.hbs
+++ b/templates/ClientInstance.ts.hbs
@@ -37,7 +37,7 @@ const USER_AGENT_HEADER = "user-agent";
 const USER_AGENT_VALUE = "commerce-sdk@{{parent.parent.metadata.sdkVersion}};"
 
 /**
-* [{{{metadata.name}}}](https://developer.commercecloud.com/s/api-details/{{{getObjectIdByAssetId metadata.assetId}}})
+* [{{{metadata.name}}}](https://developer.commercecloud.com/s/api-details/{{{getObjectIdByAssetId metadata.assetId parent.parent.metadata.enforceCcdcId}}})
 * ==================================
 *
 * *{{metadata.description}}*<br />
