--- a/templates/index.ts.hbs
+++ b/templates/index.ts.hbs
@@ -7,14 +7,10 @@ export {
 {{/each}}
 }
 
-{{!-- TODO: consider resolving the helpers as one --}}
-{{!-- NOTE: helpers is deprecated since it uses shopperCustomer --}}
 import * as helpers from "./helpers"
-import * as slasHelper from "./slasHelper";
 
 export {
-    helpers,
-    slasHelper
+    helpers
 }
 
 export { ClientConfig, CommonParameters, sdkLogger } from "@commerce-apps/core"
