--- a/src/static/helperTemplates/slas.ts.hbs
+++ b/src/static/helperTemplates/slas.ts.hbs
@@ -5,13 +5,11 @@
  * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  */
 
+/* eslint-disable tsdoc/syntax, @typescript-eslint/camelcase  */
+
 import { nanoid } from "nanoid";
-import { URL, URLSearchParams } from 'url';
-// import { ShopperLogin } from "../../../renderedTemplates/customer/shopperLogin/shopperLogin";
-
-// TODO: move into a template when done developing
+import { URL, URLSearchParams } from "url";
 import { ShopperLogin } from "../customer/shopperLogin/shopperLogin";
-
 
 /**
  * Converts a string into Base64 encoding
@@ -90,16 +88,12 @@ export async function authorize(
 ): Promise<{ code: string; url: string; usid: string }> {
   const codeChallenge = await generateCodeChallenge(codeVerifier);
 
-  // Create a copy to override specific fetchOptions
+  // Create a copy in order to modify behavior of the fetch call
+  // We do not want to redirect to redirectURI so manually control redirect
   const slasClientCopy = new ShopperLogin(slasClient.clientConfig);
-
-  // set manual redirect on server since node allows access to the location
-  // header and it skips the extra call. In the browser, only the default
-  // follow setting allows us to get the url.
-
   slasClientCopy.clientConfig.fetchOptions = {
     ...slasClient.clientConfig.fetchOptions,
-    redirect: 'manual',
+    redirect: "manual",
   };
 
   const options = {
@@ -125,64 +119,47 @@ export async function authorize(
 }
 
 /**
- * A single function to execute the ShopperLogin Public Client Guest Login with proof key for code exchange flow as described in the [API documentation](https://developer.salesforce.com/docs/commerce/commerce-api/references?meta=shopper-login-and-api-access:Summary).
- * @param slasClient - a configured instance of the ShopperLogin SDK client.
- * @param parameters - parameters to pass in the API calls.
- * @param parameters.redirectURI - Per OAuth standard, a valid app route. Must be listed in your SLAS configuration. On server, this will not be actually called. On browser, this will be called, but ignored.
- * @param parameters.usid? - Unique Shopper Identifier to enable personalization.
+ * A single function to execute the ShopperLogin Public Client Guest Login with proof key for code exchange flow as described in the [API documentation](https://developer.salesforce.com/docs/commerce/commerce-api/references?meta=shopper-login:Summary).
+ * @param slasClient - a configured instance of the ShopperLogin SDK client
+ * @param credentials - client secret used for authentication
+ * @param credentials.clientSecret - secret associated with client ID
+ * @param usid? - optional Unique Shopper Identifier to enable personalization
  * @returns TokenResponse
  */
 export async function loginGuestUser(
   slasClient: ShopperLogin,
-  // credentials: {
-  //   clientSecret: string
-  // },
-  parameters: {
-    redirectURI: string;
-    usid?: string;
-  }
+  credentials: {
+    clientSecret: string;
+  },
+  usid?: string
 ): Promise<ShopperLogin.TokenResponse> {
-  const codeVerifier = createCodeVerifier();
+  const authorization = `Basic ${stringToBase64(
+    `${slasClient.clientConfig.parameters.clientId}:${credentials.clientSecret}`
+  )}`;
 
-  const authResponse = await authorize(slasClient, codeVerifier, {
-    redirectURI: parameters.redirectURI,
-    hint: "guest",
-    ...(parameters.usid && { usid: parameters.usid }),
-  });
-
-  // TODO: replace public with private flow
-
-  // const authorization = `Basic ${stringToBase64(
-  //   `${slasClient.clientConfig.parameters.clientId}:${credentials.clientSecret}`
-  // )}`;
-
-  // const tokenBody: ShopperLogin.TokenRequest = {
-  //   Authorization: authorization,
-  //   grant_type: "client_credentials",
-  //   ...(parameters.usid && { usid: parameters.usid }), 
-  // };
-
-  const tokenBody: ShopperLogin.TokenRequest = {
-    client_id: slasClient.clientConfig.parameters.clientId,
-    code: authResponse.code,
-    code_verifier: codeVerifier,
-    grant_type: "authorization_code_pkce",
-    redirect_uri: parameters.redirectURI,
-    usid: authResponse.usid,
+  const options = {
+    headers: {
+      Authorization: authorization,
+    },
+    body: {
+      grant_type: "client_credentials",
+      ...(usid && { usid: usid }),
+    },
   };
 
-  return slasClient.getAccessToken({ body: tokenBody });
+  return slasClient.getAccessToken(options);
 }
 
 /**
- * A single function to execute the ShopperLogin Public Client Registered User B2C Login with proof key for code exchange flow as described in the [API documentation](https://developer.salesforce.com/docs/commerce/commerce-api/references?meta=shopper-login-and-api-access:Summary).
+ * A single function to execute the ShopperLogin Public Client Registered User B2C Login with proof key for code exchange flow as described in the [API documentation](https://developer.salesforce.com/docs/commerce/commerce-api/references?meta=shopper-login:Summary).
  * @param slasClient - a configured instance of the ShopperLogin SDK client.
- * @param credentials - the id and password to login with.
- * @param credentials.username - the id of the user to login with.
- * @param credentials.password - the password of the user to login with.
+ * @param credentials - the shopper username and password for login and client secret for additional authentication
+ * @param credentials.username - the id of the user to login with
+ * @param credentials.password - the password of the user to login with
+ * @param credentials.clientSecret - secret associated with client ID
  * @param parameters - parameters to pass in the API calls.
- * @param parameters.redirectURI - Per OAuth standard, a valid app route. Must be listed in your SLAS configuration. On server, this will not be actually called. On browser, this will be called, but ignored.
- * @param parameters.usid? - Unique Shopper Identifier to enable personalization.
+ * @param parameters.redirectURI - Per OAuth standard, a valid app route. Must be listed in your SLAS configuration. On server, this will not be actually called
+ * @param parameters.usid? - optional Unique Shopper Identifier to enable personalization
  * @returns TokenResponse
  */
 export async function loginRegisteredUserB2C(
@@ -190,6 +167,7 @@ export async function loginRegisteredUserB2C(
   credentials: {
     username: string;
     password: string;
+    clientSecret: string;
   },
   parameters: {
     redirectURI: string;
@@ -199,41 +177,58 @@ export async function loginRegisteredUserB2C(
   const codeVerifier = createCodeVerifier();
   const codeChallenge = await generateCodeChallenge(codeVerifier);
 
-  const authorization = `Basic ${stringToBase64(
+  const authHeaderUserPass = `Basic ${stringToBase64(
     `${credentials.username}:${credentials.password}`
   )}`;
 
-  const options = {
+  const optionsLogin = {
     headers: {
-      Authorization: authorization,
-    },
-    parameters: {
-      organizationId: slasClient.clientConfig.parameters.organizationId,
+      Authorization: authHeaderUserPass,
     },
     body: {
-      redirect_uri: parameters.redirectURI,
-      client_id: slasClient.clientConfig.parameters.clientId,
       code_challenge: codeChallenge,
       channel_id: slasClient.clientConfig.parameters.siteId,
+      client_id: slasClient.clientConfig.parameters.clientId,
+      redirect_uri: parameters.redirectURI,
       ...(parameters.usid && { usid: parameters.usid }),
     },
   };
 
-  const response = await slasClient.authenticateCustomer(options, true);
-
-  const authResponse = getCodeAndUsidFromUrl(response.url);
-
-  const tokenBody = {
-    client_id: slasClient.clientConfig.parameters.clientId,
-    code: authResponse.code,
-    code_verifier: codeVerifier,
-    grant_type: "authorization_code_pkce",
-    organizationId: slasClient.clientConfig.parameters.organizationId,
-    redirect_uri: parameters.redirectURI,
-    usid: authResponse.usid,
+  // Create a copy in order to modify behavior of the fetch call
+  // We do not want to redirect so manually control redirect behavior
+  const slasClientCopy = new ShopperLogin(slasClient.clientConfig);
+  slasClientCopy.clientConfig.fetchOptions = {
+    ...slasClient.clientConfig.fetchOptions,
+    redirect: "manual",
   };
 
-  return slasClient.getAccessToken({ body: tokenBody });
+  const response = await slasClientCopy.authenticateCustomer(
+    optionsLogin,
+    true
+  );
+
+  const redirectUrl = response.headers?.get("location") || response.url;
+  const authResponse = getCodeAndUsidFromUrl(redirectUrl);
+
+  const authHeaderIdSecret = `Basic ${stringToBase64(
+    `${slasClient.clientConfig.parameters.clientId}:${credentials.clientSecret}`
+  )}`;
+
+  const optionsToken = {
+    headers: {
+      Authorization: authHeaderIdSecret,
+    },
+    body: {
+      grant_type: "authorization_code_pkce",
+      code_verifier: codeVerifier,
+      code: authResponse.code,
+      client_id: slasClient.clientConfig.parameters.clientId,
+      redirect_uri: parameters.redirectURI,
+      ...(parameters.usid && { usid: parameters.usid }),
+    },
+  };
+
+  return slasClient.getAccessToken(optionsToken);
 }
 
 /**
