Add error handling with ResponseError

--- a/src/static/helperTemplates/slas.ts.hbs
+++ b/src/static/helperTemplates/slas.ts.hbs
@@ -9,6 +9,7 @@
 
 import { nanoid } from "nanoid";
 import { URL, URLSearchParams } from "url";
+import { ResponseError } from "@commerce-apps/core"
 import { ShopperLogin } from "../customer/shopperLogin/shopperLogin";
 
 /**
@@ -109,11 +110,12 @@ export async function authorize(
   };
 
   const response = await slasClientCopy.authorizeCustomer(options, true);
-  const redirectUrl = response.headers?.get("location") || response.url;
-
-  if (!redirectUrl) {
-    throw new Error("Authorization failed");
+  
+  if(response.status !== 303) {
+    throw new ResponseError(response);
   }
+
+  const redirectUrl = response.headers?.get("location") || response.url;
 
   return { url: redirectUrl, ...getCodeAndUsidFromUrl(redirectUrl) };
 }
@@ -206,6 +208,10 @@ export async function loginRegisteredUserB2C(
     optionsLogin,
     true
   );
+
+  if(response.status !== 303) {
+    throw new ResponseError(response);
+  }
 
   const redirectUrl = response.headers?.get("location") || response.url;
   const authResponse = getCodeAndUsidFromUrl(redirectUrl);
