--- a/templates/ClientInstance.ts.hbs
+++ b/templates/ClientInstance.ts.hbs
@@ -10,6 +10,7 @@ import {
 } from "@commerce-apps/core";
 import _ from "lodash";
 import type { OperationOptions } from "retry";
+import type { RequestInit } from "node-fetch";
 
 // eslint-disable-next-line @typescript-eslint/no-namespace
 export namespace {{name.upperCamelCase}} {
