--- a/templates/index.ts.hbs
+++ b/templates/index.ts.hbs
@@ -7,9 +7,10 @@ export {
 {{/each}}
 }
 
-import * as helpers from "./helpers"
+import { slasHelpers, helpers } from "./helpers"
 
 export {
+    slasHelpers,
     helpers
 }
 
