Remove new node packages

--- a/templates/index.ts.hbs
+++ b/templates/index.ts.hbs
@@ -7,10 +7,10 @@ export {
 {{/each}}
 }
 
-import { slasHelpers, helpers } from "./helpers"
+import { helpers } from "./helpers"
 
 export {
-    slasHelpers,
+    {{!-- slasHelpers, --}}
     helpers
 }
 
