--- a/src/static/helperTemplates/index.ts.hbs
+++ b/src/static/helperTemplates/index.ts.hbs
@@ -5,5 +5,5 @@
  * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  */
 
-export * as slasHelpers from "./slas";
+// export * as slasHelpers from "./slas";
 export * as helpers from "./shopperCustomer";
