--- a/templates/operations.ts.hbs
+++ b/templates/operations.ts.hbs
@@ -36,7 +36,7 @@
           {{/each}}
         },
         retrySettings?: OperationOptions,
-        fetchOptions?: RequestInit,
+        // fetchOptions?: RequestInit,
         headers?: { [key: string]: string }{{#or (is method "patch") (is method "post") (is method "put")}},
         body: {{{addNamespace (getPayloadTypeFromRequest request) @root.name.upperCamelCase}}}{{/or}}
       }
@@ -77,7 +77,7 @@
           {{/each}}
         },
         retrySettings?: OperationOptions,
-        fetchOptions?: RequestInit,
+        // fetchOptions?: RequestInit,
         headers?: { [key: string]: string }{{#or (is method "patch") (is method "post") (is method "put")}},
         body: {{{addNamespace (getPayloadTypeFromRequest request) @root.name.upperCamelCase}}}{{/or}}
       },
@@ -119,7 +119,7 @@
           {{/each}}
         },
         retrySettings?: OperationOptions,
-        fetchOptions?: RequestInit,
+        // fetchOptions?: RequestInit,
         headers?: { [key: string]: string }{{#or (is method "patch") (is method "post") (is method "put")}},
         body: {{{addNamespace (getPayloadTypeFromRequest request) @root.name.upperCamelCase}}}{{/or}}
       },
@@ -165,7 +165,7 @@
         retrySettings: (options || {}).retrySettings,
         headers: headers{{#or (is method "patch") (is method "post") (is method "put")}}, 
         body: (options || {}).body{{/or}},
-        ...(options.fetchOptions && { fetchOptions: options.fetchOptions })
+        // ...(options.fetchOptions && { fetchOptions: options.fetchOptions })
       });
     }
 
