W-10495391: Add SLAS helper (#356)
* Add initial code

* Lint code

* Restructure files

* Update files to consume new version of commerce sdk core

* Add nock for testing

* Add unit tests

* Update from public to private

* Update helpers file structure and generation

* Add skeleton example files and fix unit test

* Lint code

* Update .eslintignore

* Resolve depcheck issue by adding nanoid

* Update unit test

* Clean up util file

* Add error handling with ResponseError

* Update unit test

* Lint code

* Add helper functions for public flows

* Add example code

* Update README

* Add interface and refactor code

* Fix unit tests

* Fix depcheck issue

* Fix depcheck pt 2

* Update documentation

* Seperate helpers into helpers and slasHelpers

* Update README and examples

* Attempt to fix CI

* Attempt to fix node 16 CI

* Revert CI config

* Update Node t 18

* package lock

* Update Node 16 version in circleci

* Add .npmrc

* Remove .npmrc and modify package-lock.json to use npm registry vs nexus

* Revert node 16 ci version

* Update examples with PR comment suggestions

Co-authored-by: Gaurav Khunger <gkhunger@salesforce.com>

--- a/src/static/helperTemplates/shopperCustomer.ts.hbs
+++ b/src/static/helperTemplates/shopperCustomer.ts.hbs
@@ -1,5 +1,5 @@
 import { ShopperToken, stripBearer, ResponseError, getObjectFromResponse } from "@commerce-apps/core"
-import  * as sdk from "./"
+import  * as sdk from "../"
 
 // Type of the first input parameter for the auth function
 type AuthFuncParamType = Parameters<sdk.{{metadata.shopperAuthClient}}["{{metadata.shopperAuthApi}}"]>[0];
