throw error when invalid parameter is passed

--- a/templates/operations.ts.hbs
+++ b/templates/operations.ts.hbs
@@ -155,6 +155,8 @@
       Object.keys(optionParams).forEach((key) => {
         if(key.startsWith('c_') && optionParams[key] !== undefined) {
           queryParams[key] = optionParams[key]
+        } else if(!queryParams.hasOwnProperty(key) && !pathParams.hasOwnProperty(key)) {
+          throw new Error(`Invalid Parameter: ${key}`)
         }
       })
 
