change error to warning for invalid query param

--- a/templates/operations.ts.hbs
+++ b/templates/operations.ts.hbs
@@ -156,7 +156,7 @@
         if(key.startsWith('c_') && optionParams[key] !== undefined) {
           queryParams[key] = optionParams[key]
         } else if(!queryParams.hasOwnProperty(key) && !pathParams.hasOwnProperty(key)) {
-          throw new Error(`Invalid Parameter: ${key}`)
+          console.warn(`Invalid Parameter: ${key}`)
         }
       })
 
