add custom API helper

--- a/templates/ClientInstance.ts.hbs
+++ b/templates/ClientInstance.ts.hbs
@@ -10,6 +10,7 @@ import {
 } from "@commerce-apps/core";
 import type { OperationOptions } from "retry";
 import type { RequestInit } from "node-fetch";
+import { PathParameters } from "@commerce-apps/core/dist/base/resource";
 
 // eslint-disable-next-line @typescript-eslint/no-namespace
 export namespace {{name.upperCamelCase}} {
