--- a/templates/index.ts.hbs
+++ b/templates/index.ts.hbs
@@ -7,11 +7,12 @@ export {
 {{/each}}
 }
 
-import { slasHelpers, helpers } from "./helpers"
+import { slasHelpers, helpers, customApi } from "./helpers"
 
 export {
     slasHelpers,
-    helpers
+    helpers,
+    customApi
 }
 
 export { ClientConfig, CommonParameters, sdkLogger } from "@commerce-apps/core"
