--- a/src/static/helperTemplates/index.ts.hbs
+++ b/src/static/helperTemplates/index.ts.hbs
@@ -7,4 +7,4 @@
 
 export * as slasHelpers from "./slas";
 export * as helpers from "./shopperCustomer";
-export * as customApi from "./customApi";
+export * as customApiHelper from "./customApi";
