--- a/templates/index.ts.hbs
+++ b/templates/index.ts.hbs
@@ -7,12 +7,12 @@ export {
 {{/each}}
 }
 
-import { slasHelpers, helpers, customApi } from "./helpers"
+import { slasHelpers, helpers, customApiHelper } from "./helpers"
 
 export {
     slasHelpers,
     helpers,
-    customApi
+    customApiHelper
 }
 
 export { ClientConfig, CommonParameters, sdkLogger } from "@commerce-apps/core"
