update unit tests and add flag for transforming request body

--- a/templates/index.ts.hbs
+++ b/templates/index.ts.hbs
@@ -7,12 +7,11 @@ export {
 {{/each}}
 }
 
-import { slasHelpers, helpers, customApiHelper } from "./helpers"
+import { slasHelpers, helpers } from "./helpers"
 
 export {
     slasHelpers,
-    helpers,
-    customApiHelper
+    helpers
 }
 
 export { ClientConfig, CommonParameters, sdkLogger } from "@commerce-apps/core"
