--- a/src/static/helperTemplates/index.ts.hbs
+++ b/src/static/helperTemplates/index.ts.hbs
@@ -5,6 +5,10 @@
  * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  */
 
+import { getShopperToken } from "./shopperCustomer"
+import { callCustomEndpoint } from "./customApi";
+export const helpers = {
+    callCustomEndpoint,
+    getShopperToken
+}
 export * as slasHelpers from "./slas";
-export * as helpers from "./shopperCustomer";
-export * as customApiHelper from "./customApi";
