--- a/src/static/helperTemplates/index.ts.hbs
+++ b/src/static/helperTemplates/index.ts.hbs
@@ -6,4 +6,5 @@
  */
 
 export * as slasHelpers from "./slas";
-export * as helpers from "./shopperCustomer";
+export const helpers = {}
+{{!-- ^ TODO: fix this once custom API PR gets merged in --}}
