add encoding helper

--- a/src/static/helperTemplates/index.ts.hbs
+++ b/src/static/helperTemplates/index.ts.hbs
@@ -6,7 +6,9 @@
  */
 
 import { callCustomEndpoint } from "./customApi";
+import { encodeSCAPISpecialCharacters } from "./fetchHelpers";
 export const helpers = {
-    callCustomEndpoint
+    callCustomEndpoint,
+    encodeSCAPISpecialCharacters
 }
 export * as slasHelpers from "./slas";
