Include types and index

--- a/templates/index.ts.hbs
+++ b/templates/index.ts.hbs
@@ -1,9 +1,9 @@
 {{#each children}}
-import * as {{name.upperCamelCase}} from "./{{name.lowerCamelCase}}/{{name.lowerCamelCase}}";
+import * as {{apiName}} from "./{{directoryName}}";
 {{/each}}
 export {
 {{#each children}}
-    {{name.upperCamelCase}}{{#unless @last}},{{/unless}}
+    {{apiName}}{{#unless @last}},{{/unless}}
 {{/each}}
 }
 
