--- a/templatesOas/apis.mustache
+++ b/templatesOas/apis.mustache
@@ -13,7 +13,7 @@ import { defaultBaseUri, USER_AGENT_HEADER, USER_AGENT_VALUE } from "../runtime"
 import type {
     CompositeParameters,
     RequireParametersUnlessAllAreOptional
-} from "../../helpers/types";
+} from "../../types";
 
 import type {
     {{#imports}}
