--- a/templatesOas/index.mustache
+++ b/templatesOas/index.mustache
@@ -13,6 +13,8 @@ import type * as ModelTypes from './models/index'
 
 export namespace {{#lambda.titlecase}}{{#lambda.camelcase}}{{appName}}{{/lambda.camelcase}}{{/lambda.titlecase}}Types {
     // API types
+    export type {{#lambda.titlecase}}{{#lambda.camelcase}}{{appName}}{{/lambda.camelcase}}{{/lambda.titlecase}}PathParameters = ApiTypes.{{#lambda.titlecase}}{{#lambda.camelcase}}{{appName}}{{/lambda.camelcase}}{{/lambda.titlecase}}PathParameters
+    export type {{#lambda.titlecase}}{{#lambda.camelcase}}{{appName}}{{/lambda.camelcase}}{{/lambda.titlecase}}QueryParameters = ApiTypes.{{#lambda.titlecase}}{{#lambda.camelcase}}{{appName}}{{/lambda.camelcase}}{{/lambda.titlecase}}QueryParameters
     {{#apiInfo}}
     {{#apis}}
     {{#operations}}
@@ -24,6 +26,8 @@ export namespace {{#lambda.titlecase}}{{#lambda.camelcase}}{{appName}}{{/lambda.
     {{/stringEnums}}
     {{/isEnum}}
     {{/allParams}}
+    export type {{nickname}}QueryParameters = ApiTypes.{{nickname}}QueryParameters
+    export type {{nickname}}PathParameters = ApiTypes.{{nickname}}PathParameters
     {{/operation}}
     {{/operations}}
     {{/apis}}
