Remove tsdoc and adjust eslint

--- a/templatesOas/apis.mustache
+++ b/templatesOas/apis.mustache
@@ -58,9 +58,9 @@ export type {{operationIdCamelCase}}{{enumName}} = typeof {{operationIdCamelCase
 * [{{appName}}](https://developer.salesforce.com/docs/commerce/commerce-api/references?meta={{#lambda.kebabcase}}{{appName}}{{/lambda.kebabcase}}:Summary)
 * ==================================
 *
-* *{{{unescapedAppDescription}}}*<br />
+* *{{{unescapedAppDescription}}}* <br />
 *
-* For instructions on how to retrieve access token for admin APIs: <a>https://developer.salesforce.com/docs/commerce/commerce-api/guide/authorization-for-admin-apis.html</a><br/><br/>
+* For instructions on how to retrieve access token for admin APIs: <a>https://developer.salesforce.com/docs/commerce/commerce-api/guide/authorization-for-admin-apis.html</a> <br /> <br />
 * Example with admin auth
 * 
 * ```typescript
@@ -86,7 +86,7 @@ export type {{operationIdCamelCase}}{{enumName}} = typeof {{operationIdCamelCase
 * <span style="font-size:.7em; display:block; text-align: right">
 * API Version: 1.4.4<br />
 * Last Updated: <br />  
-* </span
+* </span>
 *
 */
 export class {{#lambda.titlecase}}{{#lambda.camelcase}}{{appName}}{{/lambda.camelcase}}{{/lambda.titlecase}} extends BaseClient {
